# GO_LTR

./: README.md  pyproject.toml
GO_scripts/: ltr_main_gene_ontology.py
src/go_ltr/: __init__.py
