[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[project]
name = "GO_LTR"
version = "0.164"
author = [{name = "Sandor Szedmak", email = "sandor.szedmak@aalto.fi"}]
description = "Latent Tensor Reconstruction solver for polynomial regression module"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.20.0",
    "scipy>=1.9"]

[project.urls]
"Homepage" = "https://github.com/aalto-ics-kepaco/GO_LTR"
"Bug Tracker" = "https://github.com/aalto-ics-kepaco/GO_LTR/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/go_ltr"]

